--- a/Piper_TTS.ipynb
+++ b/Piper_TTS.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -247,6 +248,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/neuralfalcon/piper-tts/blob/main/Piper_TTS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "[piper github repository](https://github.com/rhasspy/piper/tree/master)\n"
       ],
@@ -256,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -432,7 +443,7 @@
         "id": "c2W-geWlyZyG",
         "outputId": "5b83e366-8ab7-4b6a-bb16-4505e4f3711b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,11 +480,7 @@
       "cell_type": "code",
       "source": [
         "#@title Download tts audio { display-mode: \"form\" }\n",
-        "\n",
         "from google.colab import files\n",
-        "\n",
-        "\n",
-        "\n",
         "files.download(save_tts_path)"
       ],
       "metadata": {
@@ -484,7 +491,7 @@
         "id": "bPYZ2cLGyzXK",
         "outputId": "103a8a7c-c8a5-4e44-ee94-4fe1f8fc18b8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
